优化edit_file_with_git_patch工具